<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/cancel_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginbox_bt"
        android:layout_alignBottom="@+id/loginbox_bt"
        android:layout_alignParentRight="true"
        android:layout_marginRight="66dp"
        android:background="#FFFFFF"
        android:text="@string/bt_cancel" />

    <EditText
        android:id="@+id/username_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/edt_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username_edt"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginbox_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password_edt"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_login" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbox_bt"
        android:layout_toLeftOf="@+id/cancel_bt"
        android:text="@string/sign_up" />

</RelativeLayout>