<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="Registration Form"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="586dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="10dp"
                android:hint="first name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/first_name"
                android:layout_alignRight="@+id/first_name"
                android:layout_below="@+id/first_name"
                android:layout_marginBottom="10dp"
                android:hint="last name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/last_name"
                android:layout_alignRight="@+id/last_name"
                android:layout_below="@+id/last_name"
                android:layout_marginBottom="10dp"
                android:hint="user name"
                android:paddingLeft="10dp" >
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/user_name"
                android:layout_alignRight="@+id/user_name"
                android:layout_below="@+id/user_name"
                android:layout_marginBottom="10dp"
                android:hint="password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10dp" >
            </EditText>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/password"
                android:layout_alignRight="@+id/password"
                android:layout_below="@+id/password"
                android:layout_marginBottom="10dp"
                android:hint="confirm password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10dp" >
            </EditText>

            <EditText
                android:id="@+id/email_id"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/confirm_password"
                android:layout_alignRight="@+id/confirm_password"
                android:layout_below="@+id/confirm_password"
                android:layout_marginBottom="10dp"
                android:hint="email id"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp" >
            </EditText>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/email_id"
                android:layout_alignRight="@+id/email_id"
                android:layout_below="@+id/email_id"
                android:layout_marginBottom="10dp"
                android:hint="phone number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="10dp" >
            </EditText>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/phone_number"
                android:layout_alignRight="@+id/phone_number"
                android:layout_below="@+id/phone_number"
                android:layout_marginBottom="10dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/female"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/gender"
                android:layout_alignRight="@+id/gender"
                android:layout_below="@+id/gender"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="date"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_below="@+id/date_of_birth"
                android:layout_marginBottom="10dp"
                android:text="Country" >
            </TextView>

            <Spinner
                android:id="@+id/country_spin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/date_of_birth"
                android:layout_alignRight="@+id/date_of_birth"
                android:layout_below="@+id/date_of_birth"
                android:layout_marginBottom="10dp" >
            </Spinner>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_below="@+id/country_spin"
                android:layout_marginBottom="10dp"
                android:text="State" >
            </TextView>

            <Spinner
                android:id="@+id/state_spin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/country_spin"
                android:layout_alignRight="@+id/country_spin"
                android:layout_below="@+id/country_spin"
                android:layout_marginBottom="10dp"
                android:entries="@array/stateArray" >
            </Spinner>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignRight="@+id/textView4"
                android:layout_below="@+id/state_spin"
                android:layout_marginBottom="10dp"
                android:text="City" >
            </TextView>

            <Spinner
                android:id="@+id/city_spin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/state_spin"
                android:layout_alignRight="@+id/state_spin"
                android:layout_below="@+id/state_spin"
                android:layout_marginBottom="10dp"
                android:entries="@array/cityArray" >
            </Spinner>

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/city_spin"
                android:layout_alignRight="@+id/city_spin"
                android:layout_below="@+id/city_spin"
                android:layout_marginBottom="10dp"
                android:text="Continue" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/first_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="18dp"
                android:text="@string/txt_firstName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/last_name"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/first_name"
                android:text="@string/txt_lastName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/user_name"
                android:layout_alignLeft="@+id/textView7"
                android:layout_below="@+id/last_name"
                android:text="@string/txt_userName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignTop="@+id/password"
                android:text="@string/txt_password" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_below="@+id/password"
                android:text="@string/txt_password" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView10"
                android:layout_below="@+id/confirm_password"
                android:text="@string/txt_email" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView13"
                android:layout_below="@+id/gender"
                android:text="Date Of Birth" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_centerVertical="true"
                android:text="@string/txt_gender" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView13"
                android:layout_alignTop="@+id/phone_number" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView10"
                android:layout_below="@+id/email_id"
                android:text="@string/txt_contact" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>